--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
             </div>
         </div>
     </center>
-
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="rss.xml" class="embed-responsive-item"></iframe>
+    </div>
 </body>
 <footer style="background-color:#838383;">
     <div class="row">
