--- a/staff.html
+++ b/staff.html
@@ -7,12 +7,11 @@
     <meta name="keywords" content="Kingdom,Life,Kingdom Life, MMO, Kingdom Life MMO, Minecraft Server, Minecraft, Server">
     <meta name="author" content="ewm2000">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="render.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
+    <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
-    <link href="css/king.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/test.css" rel="stylesheet" type="text/css">
+    <link href="css/king.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.js"></script>
@@ -37,7 +36,7 @@
 <body>
 
     <!--- NAV BAR --->
-     <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -47,25 +46,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life MMORPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Server/Staff Related <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="about_us.html">About us</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="donate.html">Donate</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="map/index.html">Map</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="gallery/gallery.html">Gallery</a></li>
-                        </ul>
-                    </li>
+
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="staff.html">Staff</a></li>
+                    <li><a href="map/index.html">Map</a></li>
+                    <li><a href="gallery/gallery.html">Gallery</a></li>
                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
@@ -88,8 +80,37 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="http://kingdomlifemmo.minecraftmarket.com">(Support for older browsers)</iframe>
+
+    <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
+        <div class="container" style="height: 400px;">
+
+            <h1 style="color:white;">Kingdom Life</h1>
+            <p style="color:white;">Staff List</p>
+        </div>
+    </div>
+    <h1>The Founder</h1>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-1" style="font-size:20px;">Traeton Matty</div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4"></div>
+
+    </div>
+    <h1>The Dev Team</h1>
+    <center>The Head Dev- ShowbizLocket</center>
+    <center>The Webguy/Sys Admin - Ewm2000 </center>
+
+    <center>The Builders</center>
+    <center></center>
+
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+
     </div>
 
 </body>
