--- a/features.html
+++ b/features.html
@@ -65,22 +65,12 @@
                             <li><a href="gallery/gallery.html">Gallery</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="about_us.html">Wiki</a></li>
+                    <li><a href="/forum/">Forum</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
-                    <li class="dropdown">
-                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="gear.html">Armor and Weapons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="towns.html">Towns</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="dungeons.html">Dungeons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="spells.html">Spells</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="quests.html">Quests</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="features.html">Features </a></li>
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
