--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
         ga('create', 'UA-75171729-1', 'auto');
         ga('send', 'pageview');
     </script>
+
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="http://www.google.com/uds/solutions/dynamicfeed/gfdynamicfeedcontrol.js" type="text/javascript"></script>
+
+    <style type="text/css">
+        @import url("http://www.google.com/uds/solutions/dynamicfeed/gfdynamicfeedcontrol.css");
+        #feedControl {
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 440px;
+            font-size: 12px;
+            color: #9CADD0;
+        }
+    </style>
+    <script type="text/javascript">
+        function load() {
+            var feed = "http://kingdomlifemmo.com/rss.xml";
+            new GFdynamicFeedControl(feed, "feedControl");
+
+        }
+        google.load("feeds", "1");
+        google.setOnLoadCallback(load);
+    </script>
 </head>
 
 <body>
@@ -66,22 +90,12 @@
                             <li><a href="gallery/gallery.html">Gallery</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="about_us.html">Wiki</a></li>
+                    <li><a href="/forum/">Forum</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
-                    <li class="dropdown">
-                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="gear.html">Armor and Weapons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="towns.html">Towns</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="dungeons.html">Dungeons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="spells.html">Spells</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="quests.html">Quests</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="features.html">Features </a></li>
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -101,6 +115,13 @@
     </center>
     <div class="embed-responsive embed-responsive-16by9">
         <iframe src="rss.xml" class="embed-responsive-item"></iframe>
+    </div>
+
+
+
+
+    <div id="body">
+        <div id="feedControl">Loading...</div>
     </div>
 </body>
 <footer style="background-color:#838383;">
