Making some changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <link href="css/test.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
+    <script href="js/typed.js"></script>
+    <script>
+        $(function () {
+            $(".do").typed({
+                strings: ["HTML/CSS Developer", "Minecraft System Admin", "Gaming Clan Leader", "CSGO Player", ],
+                loop: true,
+                loopCount: false,
+                backDelay: 1000,
+                typeSpeed: 0
+
+            });
+        });
+    </script>
     <script src="js/bootstrap.js"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -113,13 +126,7 @@
             </div>
         </div>
     </center>
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe src="rss.xml" class="embed-responsive-item"></iframe>
-    </div>
-
-
-
-
+    <!---Plan on redoing the news feed system, is a major work in process. Tried Multiple times to style the Rss feed but cant get anything. Will keep trying but Might just remake someting --->
     <div id="body">
         <div id="feedControl">Loading...</div>
     </div>
@@ -128,7 +135,7 @@
     <div class="row">
 
         <div class="col-md-offset-2 col-md-2">
-            <h3>Need to talk to someone</h3> Email:
+            <h3>Need to talk to someone</h3> Email:kingdomlifeserver@gmail.com
         </div>
 
     </div>
