--- a/404.html
+++ b/404.html
@@ -29,13 +29,11 @@
 </head>
 
 <body>
-    <audio autoplay loop>
-        <source src="/assets/audio/Oh%20No.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
-    </audio>
-    <h1 style="font-size:40px;">ERROR 404! ERROR 404! GO BACK</h1>
+
+    <h1 style="font-size:40px;">You have failed your Kingdom</h1>
     <hr>
     <h1>Seems you encountered a 404</h1>
-    <h1>OH NO. You took a wrong turn. Go back and take a better path.  </h1>
+    <h1>Go back and take a better path.</h1>
 
 </body>
 
