--- a/apply.html
+++ b/apply.html
@@ -36,7 +36,7 @@
 <body>
 
     <!--- NAV BAR --->
-<nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -81,12 +81,17 @@
         <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <div class="container" style="height: 400px;">
                 <h1>Kingdom Life</h1>
-                <p>Take back your kingdom</p>
+                <p>Staff Application</p>
                 <p><a class="btn btn-primary btn-lg" href="apply.html" role="button">Apply For Staff</a></p>
             </div>
         </div>
     </center>
+    <form>
 
+
+
+
+    </form>
 
 </body>
 
