--- a/donate.html
+++ b/donate.html
@@ -66,7 +66,7 @@
                             <li><a href="gallery/gallery.html">Gallery</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Wiki</a></li>
+                    <li><a href="/wiki/">Wiki</a></li>
                     <li><a href="/forum/">Forum</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li><a href="features.html">Features </a></li>
