--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Lens by HTML5 UP
+	Lens bya HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -17,6 +17,22 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-75171729-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body class="is-loading-0 is-loading-1 is-loading-2">
