--- a/apply.html
+++ b/apply.html
@@ -11,6 +11,7 @@
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/paper.css" rel="stylesheet" type="text/css">
     <link href="css/king.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
