--- a/features.html
+++ b/features.html
@@ -11,6 +11,7 @@
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/paper.css" rel="stylesheet" type="text/css">
     <link href="css/king.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
@@ -79,7 +80,7 @@
     </nav>
     <center>
         <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
-            <h1>Features</h1>
+            <h1 style="color:White">Features</h1>
             <br />
             <br />
             <br />
@@ -107,19 +108,19 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
-                <h1>King Gaebriel's Castle</h1>
+                <h3>King Gaebriel's Castle</h3>
                 <p>Residence to His Heinousness Prince Traeton, King Gaebriel's Castle greets newcomers to Danne with its massive vault of weapons and defense. Villagers enjoy complete and total protection through the thick walls and high security.</p>
             </div>
             <div class="col-md-2">
-                <h1>Du'berville</h1>
+                <h3>Du'berville</h3>
                 <p>With the central focus on Agriculture, Du'berville contributes to the success of Danne by harvesting crops and caring and raising livestock. </p>
             </div>
             <div class="col-md-2">
-                <h1>Insert Name</h1>
+                <h3>Insert Name</h3>
                 <p>______ has one priority, and that is commerce. Villagers offer unique trades in exchange for emeralds, and players come to ______ to offer their goods and services, too.</p>
             </div>
             <div class="col-md-2">
-                <h1>Insert Name</h1>
+                <h3>Insert Name</h3>
                 <p>Containing the harbor that houses Danne's fleet of vessels, the port town of ______ supports Danne through fishing and helping protect Danne from evil monsters that might arise from the Great Ocean.</p>
             </div>
         </div>
