--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Kingdom Life</title>
     <link href="css/king.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/paper.css" rel="stylesheet" type="text/css">
     <link href="css/test.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
@@ -127,9 +128,22 @@
         </div>
     </center>
     <!---Plan on redoing the news feed system, is a major work in process. Tried Multiple times to style the Rss feed but cant get anything. Will keep trying but Might just remake someting --->
-    <div id="body">
-        <div id="feedControl">Loading...</div>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-1">
+            <p>Plan on adding a server Querry Here where it will display weather the server is up and how many players are on it</p>
+        </div>
+        <div class="col-md-4">
+            <div id="body">
+                <div id="feedControl">Loading...</div>
+            </div>
+            <p>Plan on redoing the news feed system, is a major work in process. Tried Multiple times to style the Rss feed but cant get anything. Will keep trying but Might just remake someting</p>
+        </div>
+        <div class="col-md-3 col-md-offset-1">
+            <p>Might Thrown Ads here </p>
+        </div>
+
     </div>
+
 </body>
 <footer style="background-color:#838383;">
     <div class="row">
