--- a/about_us.html
+++ b/about_us.html
@@ -11,6 +11,7 @@
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/paper.css" rel="stylesheet" type="text/css">
     <link href="css/king.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
@@ -80,7 +81,7 @@
     <center>
         <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <div class="container" style="height: 400px;">
-                <h1>Kingdom Life</h1>
+                <h1 style="color:White">Kingdom Life</h1>
                 <p>Take back your kingdom</p>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Apply For Staff</a></p>
             </div>
