--- a/donate.html
+++ b/donate.html
@@ -12,6 +12,7 @@
     <title>Kingdom Life</title>
     <link href="css/king.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/paper.css" rel="stylesheet" type="text/css">
     <link href="css/test.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
