--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     <!---Plan on redoing the news feed system, is a major work in process. Tried Multiple times to style the Rss feed but cant get anything. Will keep trying but Might just remake someting --->
     <div class="row">
         <div class="col-md-3 col-md-offset-1">
-            <p>Plan on adding a server Querry Here where it will display weather the server is up and how many players are on it</p>
+ASDASDASDASDASD
+
         </div>
         <div class="col-md-4">
             <div id="body">
