--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <li><a href="gallery/gallery.html">Gallery</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Wiki</a></li>
+                    <li><a href="/wiki/">Wiki</a></li>
                     <li><a href="/forum/">Forum</a></li>
                     <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li><a href="features.html">Features </a></li>
@@ -130,7 +130,7 @@
     <!---Plan on redoing the news feed system, is a major work in process. Tried Multiple times to style the Rss feed but cant get anything. Will keep trying but Might just remake someting --->
     <div class="row">
         <div class="col-md-3 col-md-offset-1">
-ASDASDASDASDASD
+            ASDASDASDASDASD
 
         </div>
         <div class="col-md-4">
