--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
         $(function () {
             $(".do").typed({
-                strings: ["HTML/CSS Developer", "Minecraft System Admin", "Gaming Clan Leader", "CSGO Player", ],
+                strings: ["Join the Ranks", "Rescue the Great King", "Defeat the Evil of the Land", "Take Back your Kingdom", ],
                 loop: true,
                 loopCount: false,
                 backDelay: 1000,
@@ -122,7 +122,10 @@
             <div class="container" style="height: 400px;">
 
                 <h1 style="color:white;">Kingdom Life</h1>
-                <p style="color:white;">Take back your kingdom</p>
+                <p>
+                    <span class="do"></span>
+                    <span class="typed-cursor"></span>
+                </p>
                 <p><a class=" btn btn-primary btn-lg " href="apply.html " role="button ">Apply For Staff</a></p>
             </div>
         </div>
